<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recongnize</string>
    <string name="play">Play!</string>
    <string name="cancel">Nah!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">Image for the Game</string>
    <string name="title_activity_start__game">Start_Game</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="launch_button_text">PLAY</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="facebook_button">FACEBOOK</string>
    <string name="theme_title">SELECT THEME</string>
    <string name="start_game">START</string>
    <string name="theme_display_image">Image that represents category</string>
    <string name="title_activity_theme_controller">ThemeControllerActivity</string>
    <string name="title_activity_transition_score">TransitionScoreActivity</string>
    <string name="thumbdesc">Options of the game</string>
    <string name="transit_score_title">YOU SCORED</string>
    <string name="title_activity_game_manager">GameManagerActivity</string>
    <string name="theme_options">Options Image</string>
    <string name="theme_albums">Albums Image</string>
    <string name="title_activity_albums">AlbumsActivity</string>
    <string name="albumchooser">Choose a Library</string>
    <string name="back_button_desc">Back Button Description</string>
    <string name="transit_highscore">HIGH SCORE</string>
    <string name="view_leaderboard">VIEW LEADERBOARD</string>
    <string name="pedagog_title">Did you know?</string>
    <string name="pedagog_desc">Ibusdae Quibus Dolenet Ommolorese.Doluptatium Eumenih Illenim Usapica TemperoEatur, To Miliquam Que Comnis Explit Verruptatem. Nequia Cuptatusciis Suntio. Hitium Que Doluptae Et Lam, Voluptibus Ideris Dis Essumquias Duntiae Rspiet Re Lam Fugitature</string>
    <string name="welcome1">Hey there, how are you? I\'m good, thanks for not asking.</string>
    <string name="welcome2">Hola!</string>
    <string name="welcome3">What are you waiting for?! Press Start!</string>
    <string name="welcome4">I\'ve missed you, it gets lonely in here.</string>
    <string name="welcome5">You betta RECOGNIZE!</string>
    <string name="welcome6">Gooooooo team!</string>
    <string name="welcome7">My favorite colors are green and orange. Just thought you should know.</string>
    <string name="welcome8">Sometimes...I feel like you\'re just using me for my awesome game.</string>
    <string name="welcome9">Can I just say something? There was jelly in the cupboard.</string>
    <string name="welcome10">Are you going to tell your friends about me? I think you should.</string>
    <string name="welcome11">Can we be Facebook official yet?</string>
    <string name="welcome12">You like nice today. Just say\'n.</string>
    <string name="Test">test</string>
    <string name="mustaches_str">They\'re Seasonal\n\nMustache hair grows faster than any other body hair. It sprouts more in spring and summer than in autumn and winter.</string>
    <string name="city_skylines_str">From 2000 to 2013, the total number of 200-meter-plus buildings in existence increased an astounding 318 percent from 261 to 830.</string>
    <string name="aliens_str">Although some self-styled experts allege mysterious natural causes or alien origin, there is a scientific consensus that nearly all crop cirlce cases are man-made.</string>
    <string name="art_str">When Van Gogh first began painting, he used peasants as models and later would paint flowers, landscapes and himself, mostly because he was too poor to pay the models.</string>
    <string name="superheroes_str">Some superheroes, such as Batman, Green Arrow, Hawkeye and the Question possess no superhuman powers but have mastered skills such as martial arts and forensic sciences to a highly remarkable degree.</string>
    <string name="usflags_str">The date May 20th 1775, above the letters on the North Carolina flag recalls the Mecklenburg Declaration of Independence</string>
    <string name="dogs_str">A bloodhound can have up to 300 million scent receptors in its nose, as compared to the 5 million receptors that each human posesses.</string>
    <string name="microscopic_str">Under a microscope, a mento would resemble the appearnce of a highly cratered moon.</string>
    <string name="animal_patterns_str">Animals mimic both their environment and more dangerous species in order to survive in preadatorial climates.</string>
    <string name="cartoons_str">South Park creators Trey Parker and Matt Stone created the musical The Book of Morman, which has acquired nine Tony Awards since it\'s inception in 2011.</string>
    <string name="celeb_yearbook_str">Actress Zooey Deschanel\'s name was taken from novelist J.D. Salinger\'s notable male character of &quot;Franny and Zooey&quot;.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="batman_fact">He is really Bruce Wayne</string>
    <string name="captain_fact">He\'s really old</string>
    <string name="flash_fact">He\'s really fast</string>
    <string name="gambit_fact">He throws cards</string>
    <string name="hulk_fact">He is strong</string>
    <string name="ironman_fact">He is rich</string>
    <string name="spiderman_fact">He swings</string>
    <string name="storm_fact">Lightning is scary</string>
    <string name="superman_fact">He is an alien</string>
    <string name="wonder_fact">Princess of themyscira</string>
</resources>
