<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/recognize_2015_bg"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#ad42ad"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp" >

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/theme_display_image"
            android:scaleType="centerCrop"
            android:src="@drawable/detective" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#4c4c4c"
            android:contentDescription="@string/theme_display_image"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/Test"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/img_represent"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/theme_display_image"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mustaches_represent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/recognize_2015_start"
            android:contentDescription="@string/theme_display_image" />

        <ImageView
            android:id="@+id/play_game"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignBottom="@+id/img_represent"
            android:layout_alignRight="@+id/img_represent"
            android:layout_alignEnd="@+id/img_represent"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/album_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/img_represent"
            android:contentDescription="@string/theme_display_image"
            android:padding="5dp"
            android:text="@string/Test"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:id="@+id/trends_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="#f6921e"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:radius="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:contentDescription="@string/theme_display_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mustaches_represent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#f6921e"
                    android:contentDescription="@string/theme_display_image"
                    android:paddingTop="5dp"
                    android:text="@string/Test"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="#f6921e"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:radius="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:contentDescription="@string/theme_display_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mustaches_represent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#f6921e"
                    android:contentDescription="@string/theme_display_image"
                    android:paddingTop="5dp"
                    android:text="@string/Test"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="#f6921e"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:radius="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:contentDescription="@string/theme_display_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mustaches_represent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#f6921e"
                    android:contentDescription="@string/theme_display_image"
                    android:paddingTop="5dp"
                    android:text="@string/Test"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2" >

        <ImageView
            android:id="@+id/settings_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/recognize_settings"
            android:contentDescription="@string/theme_options" />

        <ImageView
            android:id="@+id/albums_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/theme_albums"
            android:scaleType="fitXY" />
    </RelativeLayout>

</LinearLayout>